--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,39 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+body {
+  background: green;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.card {
+  background-color: white;
+  width: 300px;
+  height: 450px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+#number {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  font-size: 100px;
+}
+
+#suite {
+  text-align: left;
+  font-size: 100px;
+  margin-left: 15px;
+}
+
+#suite2 {
+  transform: rotate(3.142rad);
+  font-size: 100px;
+  margin-right: 15px;
+}
